crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__super_in_closure_in_inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/super_in_closure_in_inherited_method.lox
---
success: true
exit_code: 0
----- stdout -----
A

----- stderr -----
