crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__super__this_in_superclass_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/super/this_in_superclass_method.lox
---
success: true
exit_code: 0
----- stdout -----
a
b

----- stderr -----
